force-app/main/default/objects/zkmigration__Bringg_Migration_Job__c/zkmigration__Bringg_Migration_Job__c.object-meta.xml
<CustomObject>
    <label>Bringg Migration Job</label>
    <nameField>
        <displayFormat>BMJ-{0000000}</displayFormat>
        <label>Bringg Migration Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bringg Migration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>