force-app/main/default/objects/zkmigration__Bringg_Migration_Job__c/fields/zkmigration__Include_Files__c.field-meta.xml
<CustomField>
    <fullName>zkmigration__Include_Files__c</fullName>
    <defaultValue>true</defaultValue>
    <description>All files or attachments</description>
    <label>Include Files</label>
    <type>Checkbox</type>
</CustomField>