force-app/main/default/objects/zkmigration__Bringg_Migration_Job__c/fields/zkmigration__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>zkmigration__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>