force-app/main/default/objects/zkmigration__Bringg_Migration_Job__c/fields/zkmigration__Query__c.field-meta.xml
<CustomField>
    <fullName>zkmigration__Query__c</fullName>
    <label>Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>