force-app/main/default/objects/zkmigration__Bringg_Migration_Job__c/fields/zkmigration__Save_Errors__c.field-meta.xml
<CustomField>
    <fullName>zkmigration__Save_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Errors</label>
    <type>Checkbox</type>
</CustomField>